--- a/Lab17_Ex01.ipynb
+++ b/Lab17_Ex01.ipynb
@@ -81,6 +81,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "C:\\Users\\asus\\Documents\\LAB17\\Lab17-CSharp-Interface>dotnet build  Lab17_Ex01\n",
+    "\n",
+    "Restore complete (0.3s)\n",
+    "\n",
+    "  Lab17_Ex01 succeeded (2.2s) → Lab17_Ex01\\bin\\Debug\\net9.0\\Lab17_Ex01.dll\n",
+    "\n",
+    "Build succeeded in 2.9s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5.Run project โดยการใช้คำสั่ง\n",
     "\n",
     "```cmd\n",
@@ -99,7 +112,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "C:\\Users\\asus\\Documents\\LAB17\\Lab17-CSharp-Interface>dotnet run --project Lab17_Ex01\n",
+    "\n",
+    "Dog move by running on the ground\n",
+    "\n",
+    "Dog move by running on the ground\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "7.อธิบายสิ่งที่พบในการทดลอง"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "จากการทดลองนี้ พบว่ามีการใช้งานที่แตกต่างกันของ polymorphism \n",
+    "\n",
+    "อินเตอร์เฟส IMovable ที่มีเมธอด Move()\n",
+    "\n",
+    "คลาสแอบสแทรกต์ Animal ที่สืบทอดจาก IMovable และมีเมธอดแอบสแทรกต์ Move()\n",
+    "\n",
+    "คลาส Dog ที่สืบทอดจาก Animal และ override เมธอด Move()\n",
+    "\n",
+    "\n",
+    "animal_1 ถูกประกาศเป็นชนิด var ซึ่งคอมไพเลอร์จะมองว่าเป็นชนิด Dog เมื่อเรียก animal_1.Move() คอมไพเลอร์จะเรียกเมธอด Move() จากคลาส Dog \n",
+    "\n",
+    "animal_2 ถูกประกาศว่าเป็นชนิด IMovable แต่ชี้ไปที่อ็อบเจกต์ Dog เมื่อเรียก animal_2.Move() คอมไพเลอร์จะเรียกเมธอด Move() ผ่านอินเตอร์เฟส IMovable\n",
+    "\n",
+    "เวลารัน จะเรียกเมธอด Move() ที่ implements ใน Dog "
    ]
   }
  ],
