--- a/Lab17_Ex02.ipynb
+++ b/Lab17_Ex02.ipynb
@@ -81,6 +81,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "C:\\Users\\asus\\Documents\\LAB17\\Lab17-CSharp-Interface>dotnet build  Lab17_Ex02             \n",
+    "\n",
+    "Restore complete (0.3s)\n",
+    "\n",
+    "  Lab17_Ex02 succeeded (1.9s) → Lab17_Ex02\\bin\\Debug\\net9.0\\Lab17_Ex02.dll\n",
+    "\n",
+    "Build succeeded in 2.6s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5.Run project โดยการใช้คำสั่ง\n",
     "```cmd\n",
     "dotnet run --project Lab17_Ex02\n",
@@ -98,7 +111,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "C:\\Users\\asus\\Documents\\LAB17\\Lab17-CSharp-Interface>dotnet run --project Lab17_Ex02      \n",
+    "\n",
+    "Dog move by running on the ground\n",
+    "\n",
+    "Dog move by running on the ground\n",
+    "\n",
+    "Dog move by running on the ground"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "7.อธิบายสิ่งที่พบในการทดลอง"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "จากการทดลองมีการใช้งาน Interface และ Abstract Class โดยมีการสร้าง Interface ชื่อ IMovable ที่กำหนดเมธอด Move() และมี Abstract Class ชื่อ Animal ที่สืบทอด \n",
+    "\n",
+    "Interface นี้ แต่ยังไม่ได้เขียนรายละเอียดการทำงานของเมธอด จากนั้นมีคลาส Dog ที่สืบทอดจาก Animal และ Override เมธอด Move() เพื่อกำหนดพฤติกรรมเฉพาะของสุนัข \n",
+    "\n",
+    "เมื่อทำการสร้างอาร์เรย์ของ IMovable  3 ตัวและใส่อ็อบเจ็กต์ Dog ทั้งหมด แล้วเรียกใช้งานเมธอด Move() ผ่านการวนลูป foreach ผลลัพธ์จะแสดงข้อความ \n",
+    "\n",
+    "\"Dog move by running on the ground\" ออกมาทั้งหมด 3 ครั้ง ใช้หลักการ Polymorphism ที่ทำให้สามารถอ้างถึงคลาสลูกผ่าน Interface หรือคลาสแม่ได้"
    ]
   }
  ],
