--- a/Lab17_Ex03.ipynb
+++ b/Lab17_Ex03.ipynb
@@ -100,6 +100,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "C:\\Users\\asus\\Documents\\LAB17\\Lab17-CSharp-Interface>dotnet build  Lab17_Ex03             \n",
+    "\n",
+    "Restore complete (0.3s)\n",
+    "\n",
+    "  Lab17_Ex03 succeeded (1.8s) → Lab17_Ex03\\bin\\Debug\\net9.0\\Lab17_Ex03.dll\n",
+    "\n",
+    "Build succeeded in 2.5s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5.Run project โดยการใช้คำสั่ง\n",
     "\n",
     "```cmd\n",
@@ -118,7 +131,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "C:\\Users\\asus\\Documents\\LAB17\\Lab17-CSharp-Interface>dotnet run --project Lab17_Ex03     \n",
+    " \n",
+    "Dog move by running on the ground\n",
+    "\n",
+    "Bird move by flying in the air\n",
+    "\n",
+    "Fish move by swimming in the water"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "7.อธิบายสิ่งที่พบในการทดลอง"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "จาากการทดลองมีการใช้งาน Polymorphism  โดยมีการสร้าง Interface ชื่อ IMovable ที่กำหนดเมธอด Move() และมี Abstract Class ชื่อ Animal ที่สืบทอด Interface นี้ จากนั้นมีการสร้างคลาสลูก 3 คลาสคือ Dog, \n",
+    "\n",
+    "Fish และ Bird ที่แต่ละคลาสมีการ Override เมธอด Move() เพื่อกำหนดพฤติกรรมเฉพาะของสัตว์แต่ละชนิด เมื่อทำการสร้างอาร์เรย์ของ Animal ขนาด 3 ตัวและใส่อ็อบเจ็กต์แต่ละชนิดลงไป แล้วเรียกใช้งานเมธอด Move\n",
+    "\n",
+    "() ผ่านการวนลูป foreach ผลลัพธ์จะแสดงข้อความที่แตกต่างกันตามชนิดของสัตว์ คือ \"Dog move by running on the ground\", \"Bird move by flying in the air\" และ \"Fish move by swimming in the water\" \n",
+    "\n",
+    "ใช้หลักการ Polymorphism ที่ทำให้วัตถุต่างชนิดสามารถตอบสนองต่อข้อความเดียวกันด้วยพฤติกรรมที่แตกต่างกันได้"
    ]
   }
  ],
