--- a/Lab17_Ex04.ipynb
+++ b/Lab17_Ex04.ipynb
@@ -104,6 +104,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "C:\\Users\\asus\\Documents\\LAB17\\Lab17-CSharp-Interface>dotnet build  Lab17_Ex04\n",
+    "\n",
+    "Restore complete (0.2s)\n",
+    "\n",
+    "  Lab17_Ex04 succeeded (0.5s) → Lab17_Ex04\\bin\\Debug\\net9.0\\Lab17_Ex04.dll\n",
+    "\n",
+    "Build succeeded in 1.2s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5.Run project โดยการใช้คำสั่ง\n",
     "\n",
     "```cmd\n",
@@ -122,7 +135,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "C:\\Users\\asus\\Documents\\LAB17\\Lab17-CSharp-Interface>dotnet run --project Lab17_Ex04      \n",
+    "\n",
+    "Dog move by running on the ground\n",
+    "\n",
+    "Dog speaks: Woof woof!\n",
+    "\n",
+    "Bird move by flying in the air\n",
+    "\n",
+    "Bird speaks: Tweet tweet!\n",
+    "\n",
+    "Fish move by swimming in the water\n",
+    "\n",
+    "Fish speaks: Blub blub!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "7.อธิบายสิ่งที่พบในการทดลอง"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "จากการทดลองส่วนเมธอด Speak() ไม่ได้ถูก Implement ไว้ ทำให้เกิด  Error เนื่องจากคลาส Animal ไม่ได้ประกาศให้ Speak() เป็น Abstract Method และไม่ได้ Implement เมธอดนี้ด้วย นอกจากนี้ คลาสลูกทั้ง Dog, Fish และ Bird ที่สืบทอดจาก Animal \n",
+    "\n",
+    "ก็ไม่ได้ Implement เมธอด Speak()  แก้โดยการ เพิ่ม abstract public void Speak(); ในคลาส Animal เพื่อประกาศเมธอด abstract ที่จะต้องถูก implement โดยคลาสลูก เพิ่มการ implement เมธอด Speak() ในทุกคลาสลูก (Dog, Fish และ Bird)\n",
+    "\n",
+    "เพิ่มการเรียกใช้ animal.Speak() ในลูป foreach เพื่อให้แต่ละสัตว์ส่งเสียงออกมาตามสัตว์ชนิดนั้นๆ"
    ]
   }
  ],
