--- a/Lab17_Ex05.ipynb
+++ b/Lab17_Ex05.ipynb
@@ -119,6 +119,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "C:\\Users\\asus\\Documents\\LAB17\\Lab17-CSharp-Interface>dotnet build  Lab17_Ex05          \n",
+    "\n",
+    "Restore complete (0.3s)\n",
+    "\n",
+    "  Lab17_Ex05 succeeded (0.5s) → Lab17_Ex05\\bin\\Debug\\net9.0\\Lab17_Ex05.dll\n",
+    "\n",
+    "Build succeeded in 1.2s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5.Run project โดยการใช้คำสั่ง\n",
     "\n",
     "```cmd\n",
@@ -137,7 +150,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "C:\\Users\\asus\\Documents\\LAB17\\Lab17-CSharp-Interface>dotnet run --project Lab17_Ex05      \n",
+    "\n",
+    "Dog move by running on the ground\n",
+    "\n",
+    "Dog speak \"Bok Bok\"\n",
+    "\n",
+    "-------\n",
+    "\n",
+    "Bird move by flying in the air\n",
+    "\n",
+    "Bird speak \"Jib Jib\"\n",
+    "\n",
+    "-------\n",
+    "\n",
+    "Fish move by swimming in the water\n",
+    "\n",
+    "Fish can not speak\n",
+    "\n",
+    "-------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "7.อธิบายสิ่งที่พบในการทดลอง"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "จากการทดลองมีการใช้งาน Multiple Interfaces และ Abstract Class โดยมีการสร้าง Interface สองตัวคือ IMovable ที่กำหนดเมธอด Move() และ ISpeakable ที่กำหนดเมธอด Speak() จากนั้นมี Abstract Class ชื่อ\n",
+    "\n",
+    "Animal ที่สืบทอดทั้งสอง Interface และประกาศให้ทั้งสองเมธอดเป็น Abstract Method ที่คลาสลูกต้อง Override มาใช้งาน คลาสลูกทั้ง Dog, Fish และ Bird ต่างก็ Override \n",
+    "\n",
+    "ทั้งสองเมธอดตามพฤติกรรมเฉพาะของสัตว์แต่ละชนิด เมื่อทำการสร้างอาร์เรย์ของ Animal และใส่อ็อบเจ็กต์แต่ละชนิดลงไป แล้วเรียกใช้งานเมธอด Move() และ Speak() ผ่านการวนลูป foreach \n",
+    "\n",
+    "ผลลัพธ์จะแสดงข้อความการเคลื่อนที่และการส่งเสียงที่แตกต่างกันตามชนิดสัตว์ กับมีขีดคั่นระหว่างแต่ละสัตว์ "
    ]
   }
  ],
