--- a/Lab17_Ex06.ipynb
+++ b/Lab17_Ex06.ipynb
@@ -109,6 +109,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "C:\\Users\\asus\\Documents\\LAB17\\Lab17-CSharp-Interface>dotnet build  Lab17_Ex06\n",
+    "\n",
+    "Restore complete (0.3s)\n",
+    "\n",
+    "  Lab17_Ex06 succeeded (0.5s) → Lab17_Ex06\\bin\\Debug\\net9.0\\Lab17_Ex06.dll\n",
+    "\n",
+    "Build succeeded in 1.1s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5.Run project โดยการใช้คำสั่ง\n",
     "\n",
     "```cmd\n",
@@ -127,7 +140,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "C:\\Users\\asus\\Documents\\LAB17\\Lab17-CSharp-Interface>dotnet run --project Lab17_Ex06      \n",
+    "\n",
+    "TV Turn on\n",
+    "\n",
+    "TV Channel up\n",
+    "\n",
+    "TV Channel down\n",
+    "\n",
+    "TV Turn off\n",
+    "\n",
+    "Lamp Turn on\n",
+    "\n",
+    "Lamp cannot change channel\n",
+    "\n",
+    "Lamp cannot change channel\n",
+    "\n",
+    "Lamp Turn off"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "7.อธิบายสิ่งที่พบในการทดลอง"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "จากการทดลองพบว่า คลาส Television และ Lamp ไม่ได้ implement interface IRemoteControl โดยตรง แต่คลาสลูกของพวกมัน (SonyTV และ DesktopLamp) เท่านั้นที่ implement interface นี้ \n",
+    "\n",
+    "ทำให้เมื่อประกาศตัวแปรเป็น Television และ Lamp แล้วเรียกใช้เมธอดจาก interface จึงเกิด error  \n",
+    "\n",
+    "แก้โดยการทำให้คลาส Television และ Lamp implement interface IRemoteControl โดยตรง โดยในคลาสเหล่านี้จะต้องประกาศเมธอดที่อยู่ใน interface ให้เป็น virtual method เพื่อให้คลาสลูกสามารถ override ได้ \n",
+    "\n",
+    "ส่วนในคลาสลูก SonyTV และ DesktopLamp ก็จะใช้ override แทนที่จะ implement ใหม่ ทำให้สามารถเรียกใช้เมธอดผ่านตัวแปรที่ประกาศเป็น Television และ Lamp ได้"
    ]
   }
  ],
