--- a/Lab17_Ex07.ipynb
+++ b/Lab17_Ex07.ipynb
@@ -109,6 +109,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "C:\\Users\\asus\\Documents\\LAB17\\Lab17-CSharp-Interface>dotnet build  Lab17_Ex07             \n",
+    "\n",
+    "Restore complete (0.3s)\n",
+    "\n",
+    "  Lab17_Ex07 succeeded (0.4s) → Lab17_Ex07\\bin\\Debug\\net9.0\\Lab17_Ex07.dll\n",
+    "\n",
+    "Build succeeded in 1.1s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5.Run project โดยการใช้คำสั่ง\n",
     "\n",
     "```cmd\n",
@@ -127,7 +140,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "C:\\Users\\asus\\Documents\\LAB17\\Lab17-CSharp-Interface>dotnet run --project Lab17_Ex07      \n",
+    "\n",
+    "TV Turn on\n",
+    "\n",
+    "TV Channel up\n",
+    "\n",
+    "TV Channel down\n",
+    "\n",
+    "TV Turn off\n",
+    "\n",
+    "Lamp Turn on\n",
+    "\n",
+    "Lamp cannot change channel\n",
+    "\n",
+    "Lamp cannot change channel\n",
+    "\n",
+    "Lamp Turn off"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "7.อธิบายสิ่งที่พบในการทดลอง"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "จากการทดลองใช้หลักการนำ interface และ class แบบ abstract มาใช้ร่วมกัน ซึ่งทำให้อุปกรณ์ต่างประเภทกัน โทรทัศน์และโคมไฟ สามารถใช้ interface เดียวกัน (IRemoteControl) เพื่อรองรับการควบคุมด้วยรีโมท \n",
+    "\n",
+    "มีการสร้าง PowerAppliance เป็น abstract class ที่มีคุณสมบัติของเครื่องใช้ไฟฟ้า จากนั้นมีคลาส Television และ Lamp ที่สืบทอดจาก PowerAppliance แล้วจึงมีคลาส SonyTV และ DesktopLamp \n",
+    "\n",
+    "ที่สืบทอดต่อและนำ IRemoteControl มาใช้ "
    ]
   }
  ],
