--- a/Lab17_Ex01.ipynb
+++ b/Lab17_Ex01.ipynb
@@ -81,6 +81,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Build succeeded"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5.Run project โดยการใช้คำสั่ง\n",
     "\n",
     "```cmd\n",
@@ -99,7 +106,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Dog move by running on the ground\n",
+    "\n",
+    "Dog move by running on the ground"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "7.อธิบายสิ่งที่พบในการทดลอง"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "การใช้งาน Interface IMovable และ Polymorphism ช่วยให้โปรแกรมยืดหยุ่นและสามารถขยายได้ง่ายโดยไม่จำเป็นต้องแก้ไขโค้ดเดิมเมื่อมีการเพิ่มคลาสใหม่ๆ ที่ Implement เมธอด Move()"
    ]
   }
  ],
